// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic - GET request: fea87208-b0d6-49f4-be90-4742487c223a 1`] = `
Object {
  "@timestamp": "2021-07-14T23:17:05.036Z",
  "agent": Object {
    "type": "fluentbit",
  },
  "client": Object {
    "ip": "2001:db8:3333:4444:5555:6666:7777:8888",
    "user": Object {
      "id": "chefs-frontend",
    },
  },
  "event": Object {
    "category": "web",
    "created": "2021-07-15T20:08:48.845207Z",
    "dataset": "node.css.http",
    "kind": "event",
    "module": "node.css",
    "original": "{\\"responseTime\\":624,\\"azp\\":\\"chefs-frontend\\",\\"clientIp\\":\\"2001:db8:3333:4444:5555:6666:7777:8888\\",\\"contentLength\\":\\"323\\",\\"httpVersion\\":\\"1.1\\",\\"hostIp\\":\\"::ffff: 10.97.8.1\\",\\"method\\":\\"GET\\",\\"path\\":\\"/api/v1/forms\\",\\"query\\":{\\"active\\":\\"true\\",\\"deleted\\":\\"false\\"},\\"statusCode\\":200,\\"userAgent\\":\\"Mozilla/5.0\\",\\"level\\":\\"http\\",\\"message\\":\\"GET /api/v1/forms?active=true 200 624ms\\",\\"timestamp\\":\\"2021-07-14T23: 17: 05.036Z\\"}",
    "type": "http",
  },
  "http": Object {
    "request": Object {
      "method": "GET",
    },
    "response": Object {
      "body": Object {
        "bytes": "323",
      },
      "status_code": 200,
      "time": 624,
    },
    "version": "1.1",
  },
  "kubernetes": Object {
    "namespace_name": "123-dev",
    "pod_ip": "10.97.8.1",
    "pod_name": "chefs-app-123",
  },
  "labels": Object {
    "application": "chefs",
    "env": "development",
  },
  "log": Object {
    "file": Object {
      "offset": 759,
      "path": "/var/log/app.log",
    },
    "level": "http",
  },
  "message": "GET /api/v1/forms 200 624ms",
  "url": Object {
    "path": "/api/v1/forms",
    "query": "active=true&deleted=false",
  },
  "user_agent": Object {
    "original": "Mozilla/5.0",
  },
}
`;

exports[`integration test of the full chain: 777d8f22-b2da-4fc5-9cf7-752e681aa5b7 1`] = `
Array [
  Object {
    "@timestamp": "2021-07-14T23:17:05.036Z",
    "_index": "nrm-logs-access-2021.07.14",
    "agent": Object {
      "type": "fluentbit",
    },
    "client": Object {
      "as": Object {
        "number": 123456,
        "organization": Object {
          "name": "TEST",
        },
      },
      "geo": Object {
        "city_name": "Victoria",
        "continent_code": "NA",
        "continent_name": "North America",
        "country_iso_code": "CA",
        "country_name": "Canada",
        "location": Object {
          "lat": 0,
          "lon": 0,
        },
        "postal_code": "ABC-123",
        "region_iso_code": "BC",
        "region_name": "British Columbia",
        "timezone": "America/Vancouver",
      },
      "ip": "2001:db8:3333:4444:5555:6666:7777:8888",
      "user": Object {
        "id": "chefs-frontend",
      },
    },
    "event": Object {
      "category": "web",
      "created": "2021-07-15T20:08:48.845207Z",
      "dataset": "node.css.http",
      "ingested": "2021-08-05T15:01:45.153-07:00",
      "kind": "event",
      "module": "node.css",
      "original": "{\\"responseTime\\":624,\\"azp\\":\\"chefs-frontend\\",\\"clientIp\\":\\"2001:db8:3333:4444:5555:6666:7777:8888\\",\\"contentLength\\":\\"323\\",\\"httpVersion\\":\\"1.1\\",\\"hostIp\\":\\"::ffff: 10.97.8.1\\",\\"method\\":\\"GET\\",\\"path\\":\\"/api/v1/forms\\",\\"query\\":{\\"active\\":\\"true\\",\\"deleted\\":\\"false\\"},\\"statusCode\\":200,\\"userAgent\\":\\"Mozilla/5.0\\",\\"level\\":\\"http\\",\\"message\\":\\"GET /api/v1/forms?active=true 200 624ms\\",\\"timestamp\\":\\"2021-07-14T23: 17: 05.036Z\\"}",
      "outcome": "success",
      "type": "http",
    },
    "http": Object {
      "request": Object {
        "method": "GET",
      },
      "response": Object {
        "body": Object {
          "bytes": "323",
        },
        "status_code": 200,
        "time": 624,
      },
      "version": "1.1",
    },
    "kinesis": Object {
      "approximateArrivalTimestamp": undefined,
      "eventID": undefined,
      "partitionKey": undefined,
      "sequenceNumber": undefined,
    },
    "kubernetes": Object {
      "namespace_name": "123-dev",
      "pod_ip": "10.97.8.1",
      "pod_name": "chefs-app-123",
    },
    "labels": Object {
      "application": "chefs",
      "env": "development",
    },
    "log": Object {
      "file": Object {
        "directory": "/var/log",
        "extension": "log",
        "name": "app.log",
        "offset": 759,
        "path": "/var/log/app.log",
      },
      "level": "http",
    },
    "message": "GET /api/v1/forms 200 624ms",
    "url": Object {
      "path": "/api/v1/forms",
      "query": "active=true&deleted=false",
    },
    "user_agent": Object {
      "original": "Mozilla/5.0",
    },
  },
]
`;
